[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
description = "{{description}}"
license = "MIT"
repository = "https://github.com/{{github-username}}/{{project-name}}"
documentation = "https://docs.rs/{{project-name}}"
keywords = ["mcp", "model-context-protocol", "ai", "tools"]
categories = ["api-bindings", "development-tools"]

[dependencies]
mcp-protocol-sdk = "0.1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

# Optional dependencies for specific features
reqwest = { version = "0.12", optional = true, features = ["json"] }
sqlx = { version = "0.8", optional = true, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tokio-fs = { version = "0.1", optional = true }

[features]
default = ["stdio"]
stdio = ["mcp-protocol-sdk/stdio"]
http = ["mcp-protocol-sdk/http", "reqwest"]
websocket = ["mcp-protocol-sdk/websocket"]
database = ["sqlx"]
file-system = ["tokio-fs"]

[[bin]]
name = "{{project-name}}"
path = "src/main.rs"

[package.metadata.template]
cargo_generate_version = ">= 0.10.0"
include = ["**/*", "!target", "!.git"]
